packages/cashc/test/compiler/InvalidParameterTypeError/implicit_cast_to_sig.cash
pragma cashscript ^0.5.0;

contract P2PKH(bytes20 pkh) {
    function spend(pubkey pk, bytes65 s) {
        require(hash160(pk) == pkh);
        require(checkSig(s, pk));
    }
}
